// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders a default item 1`] = `
<li
  role="presentation"
  tabIndex="-1"
>
  <div
    className="item"
    onClick={[Function]}
    role="menuitem"
    tabIndex="0"
  >
    1st Option
  </div>
</li>
`;

exports[`Item renders an active item 1`] = `
<li
  role="presentation"
  tabIndex="-1"
>
  <div
    className="item active"
    onClick={[Function]}
    role="menuitem"
    tabIndex="0"
  >
    1st Option
  </div>
</li>
`;
